--- a/src/gui/Material.fxml
+++ b/src/gui/Material.fxml
@@ -77,12 +77,12 @@
                                         <Insets right="5.0"/>
                                     </HBox.margin>
                                 </ComboBox>
-                                <ComboBox fx:id="cboCurricular" maxWidth="1.7976931348623157E308" prefHeight="25.0"
-                                          prefWidth="0.0" promptText="Leergebied" HBox.hgrow="ALWAYS">
+                                <org.controlsfx.control.CheckComboBox fx:id="cboCurricular" maxWidth="1.7976931348623157E308" prefHeight="25.0"
+                                          prefWidth="0.0" HBox.hgrow="ALWAYS">
                                     <HBox.margin>
                                         <Insets left="5.0" right="5.0"/>
                                     </HBox.margin>
-                                </ComboBox>
+                                </org.controlsfx.control.CheckComboBox>
                                 <ComboBox fx:id="cboFirm" maxWidth="1.7976931348623157E308" prefHeight="25.0"
                                           promptText="Firma" HBox.hgrow="ALWAYS">
                                     <HBox.margin>
