--- a/src/gui/Overview.fxml
+++ b/src/gui/Overview.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<fx:root spacing="10.0" type="VBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.OverviewController">
+<fx:root spacing="10.0" type="VBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <TableView fx:id="tvMaterials" prefHeight="200.0" prefWidth="500.0" style="-fx-focus-color: transparent" VBox.vgrow="ALWAYS">
         <columns>
