--- a/src/gui/Reservation.fxml
+++ b/src/gui/Reservation.fxml
@@ -8,7 +8,7 @@
 
 <fx:root id="AnchorPane" prefHeight="400.0" prefWidth="600.0" type="AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.ReservationController">
    <children>
-      <TextField fx:id="txfUserEmail" layoutX="88.0" layoutY="33.0" promptText="Reservatie voor" />
+      <TextField fx:id="tfUserEmail" layoutX="88.0" layoutY="33.0" onMouseEntered="#checkUserEmail" promptText="Reservatie voor" />
       <Button fx:id="btnSave" layoutX="517.0" layoutY="339.0" mnemonicParsing="false" onAction="#saveReservation" text="save" />
       <TableView fx:id="tvMaterials" layoutX="46.0" layoutY="182.0" prefHeight="184.0" prefWidth="465.0">
         <columns>
