--- a/src/gui/Overview.fxml
+++ b/src/gui/Overview.fxml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<fx:root spacing="10.0" type="VBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root spacing="10.0" type="VBox" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
    <children>
+      <HBox fx:id="hbOptions" alignment="CENTER_RIGHT" prefHeight="32.0" prefWidth="200.0">
+         <children>
+            <TextField fx:id="txfFilterMaterials" onKeyPressed="#filterMaterials" HBox.hgrow="ALWAYS" />
+         </children>
+      </HBox>
       <TableView fx:id="tvMaterials" prefHeight="200.0" prefWidth="500.0" style="-fx-focus-color: transparent" VBox.vgrow="ALWAYS">
         <columns>
           <TableColumn fx:id="tcName" prefWidth="75.0" style="-fx-alignment: center" text="Naam" />
@@ -29,7 +29,6 @@
       </TableView>
       <HBox alignment="CENTER" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="26.0">
          <children>
-            <TextField fx:id="txfFilterMaterials" onKeyPressed="#filterMaterials" />
             <ImageView fx:id="ivAddButton" fitHeight="25.0" fitWidth="25.0" onMouseClicked="#addMaterial" pickOnBounds="true" preserveRatio="true">
                <cursor>
                   <Cursor fx:constant="HAND" />
