--- a/src/gui/Reservation.fxml
+++ b/src/gui/Reservation.fxml
@@ -16,13 +16,13 @@
             <HBox alignment="CENTER" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0" VBox.vgrow="ALWAYS">
                <children>
                   <Label maxWidth="-Infinity" minWidth="-Infinity" text="Afhalen" />
-                  <DatePicker maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
+                  <DatePicker fx:id="dpStartDate" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
                      <HBox.margin>
                         <Insets left="5.0" right="5.0" />
                      </HBox.margin>
                   </DatePicker>
                   <Label maxWidth="-Infinity" minWidth="-Infinity" text="Om" />
-                  <TextField alignment="CENTER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="50.0">
+                  <TextField fx:id="tfStartTime" alignment="CENTER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="50.0">
                      <HBox.margin>
                         <Insets left="5.0" right="5.0" />
                      </HBox.margin>
@@ -32,13 +32,13 @@
                         <Insets left="5.0" />
                      </HBox.margin>
                   </Label>
-                  <DatePicker maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
+                  <DatePicker fx:id="dpEndDate" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
                      <HBox.margin>
                         <Insets left="5.0" right="5.0" />
                      </HBox.margin>
                   </DatePicker>
                   <Label maxWidth="-Infinity" minWidth="-Infinity" text="Om" />
-                  <TextField alignment="CENTER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="50.0">
+                  <TextField fx:id="tfEndTime" alignment="CENTER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="50.0">
                      <HBox.margin>
                         <Insets left="5.0" />
                      </HBox.margin>
@@ -61,12 +61,12 @@
                   </Separator>
                </children>
             </HBox>
-            <TableView layoutX="14.0" layoutY="186.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" VBox.vgrow="ALWAYS">
+            <TableView fx:id="tv" layoutX="14.0" layoutY="186.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" VBox.vgrow="ALWAYS">
               <columns>
-                <TableColumn prefWidth="75.0" text="Naam" />
-                <TableColumn prefWidth="75.0" text="Locatie" />
-                  <TableColumn prefWidth="75.0" text="Beschikbaarheid" />
-                  <TableColumn prefWidth="75.0" text="Acties" />
+                  <TableColumn fx:id="tcId" prefWidth="75.0" text="Id" />
+                <TableColumn fx:id="tcName" prefWidth="75.0" text="Naam" />
+                <TableColumn fx:id="tcLocation" prefWidth="75.0" text="Locatie" />
+                  <TableColumn fx:id="tcActions" prefWidth="75.0" text="Acties" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
