--- a/src/gui/Tabs.fxml
+++ b/src/gui/Tabs.fxml
@@ -9,7 +9,7 @@
 <fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" type="TabPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <tabs>
     <Tab fx:id="tMaterial" closable="false" text="Material" />
-      <Tab fx:id="tConflicts" closable="false" text="Conflicten" />
+      <Tab fx:id="tReservations" closable="false" text="Reservaties" />
     <Tab fx:id="tAdd" text="Toevoegen" />
       <Tab fx:id="tOptions" text="Opties" />
   </tabs>
