--- a/src/gui/LoginScreen.fxml
+++ b/src/gui/LoginScreen.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import org.controlsfx.control.textfield.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
@@ -42,7 +44,7 @@
                   </Hyperlink>
                </children>
             </GridPane>
-            <Label text="IIM" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+            <Label text="Intelligent Inventory Manager" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                <font>
                   <Font size="20.0" />
                </font>
@@ -77,7 +79,7 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </Button>
-            <Label fx:id="lblError" text="ErrorMessage" GridPane.rowIndex="3" textFill="#c09853" wrapText="true">
+            <Label fx:id="lblError" text="ErrorMessage" textFill="#c09853" wrapText="true" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets left="50.0" right="50.0" />
                </GridPane.margin>
@@ -87,7 +89,7 @@
             </Label>
             <ImageView fx:id="imgThumbnail" fitHeight="109.0" fitWidth="297.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP">
                <image>
-                  <Image url="@images/placeholder.png" />
+                  <Image url="@images/logo.png" />
                </image>
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
