--- a/src/gui/Reservation.fxml
+++ b/src/gui/Reservation.fxml
@@ -9,70 +9,81 @@
 <?import javafx.scene.layout.*?>
 
 
-<fx:root id="AnchorPane" prefHeight="400.0" prefWidth="600.0" type="AnchorPane" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
-   <children>
-      <VBox layoutX="14.0" layoutY="165.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
-         <children>
-            <HBox alignment="CENTER" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0" VBox.vgrow="ALWAYS">
-               <children>
-                  <Label maxWidth="-Infinity" minWidth="-Infinity" text="Afhalen" />
-                  <DatePicker fx:id="dpStartDate" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
-                     <HBox.margin>
-                        <Insets left="5.0" right="5.0" />
-                     </HBox.margin>
-                  </DatePicker>
-                  <Label maxWidth="-Infinity" minWidth="-Infinity" text="Om" />
-                  <TextField fx:id="tfStartTime" alignment="CENTER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="50.0">
-                     <HBox.margin>
-                        <Insets left="5.0" right="5.0" />
-                     </HBox.margin>
-                  </TextField>
-                  <Label maxWidth="-Infinity" minWidth="-Infinity" text="Terugbrengen">
-                     <HBox.margin>
-                        <Insets left="5.0" />
-                     </HBox.margin>
-                  </Label>
-                  <DatePicker fx:id="dpEndDate" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
-                     <HBox.margin>
-                        <Insets left="5.0" right="5.0" />
-                     </HBox.margin>
-                  </DatePicker>
-                  <Label maxWidth="-Infinity" minWidth="-Infinity" text="Om" />
-                  <TextField fx:id="tfEndTime" alignment="CENTER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="50.0">
-                     <HBox.margin>
-                        <Insets left="5.0" />
-                     </HBox.margin>
-                  </TextField>
-               </children>
-               <VBox.margin>
-                  <Insets bottom="5.0" />
-               </VBox.margin>
-            </HBox>
-            <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" prefHeight="17.0" VBox.vgrow="ALWAYS">
-               <children>
-                  <Label layoutX="67.0" layoutY="57.0" text="Gereserveerde materialen" AnchorPane.bottomAnchor="218.0" AnchorPane.leftAnchor="14.0" />
-                  <Separator layoutX="155.0" layoutY="172.0" maxWidth="1.7976931348623157E308" AnchorPane.bottomAnchor="222.0" AnchorPane.leftAnchor="155.0" AnchorPane.rightAnchor="14.0" HBox.hgrow="ALWAYS">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                     <HBox.margin>
-                        <Insets top="3.0" />
-                     </HBox.margin>
-                  </Separator>
-               </children>
-            </HBox>
-            <TableView fx:id="tv" layoutX="14.0" layoutY="186.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" VBox.vgrow="ALWAYS">
-              <columns>
-                  <TableColumn fx:id="tcId" prefWidth="75.0" text="Id" />
-                <TableColumn fx:id="tcName" prefWidth="75.0" text="Naam" />
-                <TableColumn fx:id="tcLocation" prefWidth="75.0" text="Locatie" />
-                  <TableColumn fx:id="tcActions" prefWidth="75.0" text="Acties" />
-              </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
-         </children>
-      </VBox>
-   </children>
+<fx:root id="AnchorPane" prefHeight="400.0" prefWidth="600.0" type="AnchorPane" xmlns:fx="http://javafx.com/fxml/1"
+         xmlns="http://javafx.com/javafx/8">
+    <children>
+        <VBox layoutX="14.0" layoutY="165.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0"
+              AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
+            <children>
+                <HBox alignment="CENTER" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0"
+                      VBox.vgrow="ALWAYS">
+                    <children>
+                        <Label maxWidth="-Infinity" minWidth="-Infinity" text="Afhalen"/>
+                        <DatePicker fx:id="dpStartDate" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
+                            <HBox.margin>
+                                <Insets left="5.0" right="5.0"/>
+                            </HBox.margin>
+                        </DatePicker>
+                        <Label maxWidth="-Infinity" minWidth="-Infinity" text="Om"/>
+                        <TextField fx:id="tfStartTime" alignment="CENTER" maxWidth="-Infinity" minWidth="-Infinity"
+                                   prefWidth="50.0">
+                            <HBox.margin>
+                                <Insets left="5.0" right="5.0"/>
+                            </HBox.margin>
+                        </TextField>
+                        <Label maxWidth="-Infinity" minWidth="-Infinity" text="Terugbrengen">
+                            <HBox.margin>
+                                <Insets left="5.0"/>
+                            </HBox.margin>
+                        </Label>
+                        <DatePicker fx:id="dpEndDate" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
+                            <HBox.margin>
+                                <Insets left="5.0" right="5.0"/>
+                            </HBox.margin>
+                        </DatePicker>
+                        <Label maxWidth="-Infinity" minWidth="-Infinity" text="Om"/>
+                        <TextField fx:id="tfEndTime" alignment="CENTER" maxWidth="-Infinity" minWidth="-Infinity"
+                                   prefWidth="50.0">
+                            <HBox.margin>
+                                <Insets left="5.0"/>
+                            </HBox.margin>
+                        </TextField>
+                    </children>
+                    <VBox.margin>
+                        <Insets bottom="5.0"/>
+                    </VBox.margin>
+                </HBox>
+                <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
+                      prefHeight="17.0" VBox.vgrow="ALWAYS">
+                    <children>
+                        <Label layoutX="67.0" layoutY="57.0" text="Gereserveerde materialen"
+                               AnchorPane.bottomAnchor="218.0" AnchorPane.leftAnchor="14.0"/>
+                        <Separator layoutX="155.0" layoutY="172.0" maxWidth="1.7976931348623157E308"
+                                   AnchorPane.bottomAnchor="222.0" AnchorPane.leftAnchor="155.0"
+                                   AnchorPane.rightAnchor="14.0" HBox.hgrow="ALWAYS">
+                            <opaqueInsets>
+                                <Insets/>
+                            </opaqueInsets>
+                            <HBox.margin>
+                                <Insets top="3.0"/>
+                            </HBox.margin>
+                        </Separator>
+                    </children>
+                </HBox>
+                <TableView fx:id="tv" layoutX="14.0" layoutY="186.0" maxHeight="1.7976931348623157E308"
+                           maxWidth="1.7976931348623157E308" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0"
+                           AnchorPane.rightAnchor="14.0" VBox.vgrow="ALWAYS">
+                    <columns>
+                        <TableColumn fx:id="tcId" prefWidth="75.0" text="Id" style="-fx-alignment: center"/>
+                        <TableColumn fx:id="tcName" prefWidth="75.0" text="Naam" style="-fx-alignment: center"/>
+                        <TableColumn fx:id="tcLocation" prefWidth="75.0" text="Locatie" style="-fx-alignment: center"/>
+                        <TableColumn fx:id="tcActions" prefWidth="75.0" text="Acties" style="-fx-alignment: center"/>
+                    </columns>
+                    <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                    </columnResizePolicy>
+                </TableView>
+            </children>
+        </VBox>
+    </children>
 </fx:root>
