--- a/src/gui/Temp.fxml
+++ b/src/gui/Temp.fxml
@@ -1,30 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import org.controlsfx.control.textfield.*?>
-<?import impl.org.controlsfx.skin.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<fx:root maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" type="AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <HBox alignment="CENTER" layoutX="83.0" layoutY="6.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="6.0">
-         <children>
-            <Label fx:id="lblTitel" layoutX="83.0" layoutY="6.0" text="Naam" AnchorPane.topAnchor="6.0" />
-         </children>
-      </HBox>
-      <VBox fx:id="vbNodes" layoutX="5.0" layoutY="233.0" AnchorPane.bottomAnchor="44.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="24.0">
-         <children>
-            <ListView fx:id="lvItems" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
-               <VBox.margin>
-                  <Insets bottom="5.0" />
-               </VBox.margin>
-            </ListView>
-         </children>
-      </VBox>
-      <HBox fx:id="hbButtons" alignment="CENTER" layoutX="-21.0" layoutY="147.0" maxHeight="-Infinity" prefHeight="25.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-   </children>
+<fx:root maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" type="AnchorPane"
+         xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+    <children>
+        <HBox alignment="CENTER" layoutX="83.0" layoutY="6.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0"
+              AnchorPane.topAnchor="6.0">
+            <children>
+                <Label fx:id="lblTitel" layoutX="83.0" layoutY="6.0" text="Naam" AnchorPane.topAnchor="6.0"/>
+            </children>
+        </HBox>
+        <VBox fx:id="vbNodes" layoutX="5.0" layoutY="233.0" spacing="10.0" AnchorPane.bottomAnchor="44.0"
+              AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="24.0">
+            <children>
+                <ListView fx:id="lvItems" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS"
+                          style="-fx-focus-color: transparent">
+                    <VBox.margin>
+                        <Insets bottom="5.0"/>
+                    </VBox.margin>
+                </ListView>
+            </children>
+            <padding>
+                <Insets bottom="10.0" top="10.0"/>
+            </padding>
+        </VBox>
+        <HBox fx:id="hbButtons" alignment="CENTER" layoutX="-21.0" layoutY="147.0" maxHeight="-Infinity"
+              prefHeight="25.0" spacing="5.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="0.0"
+              AnchorPane.rightAnchor="0.0">
+            <padding>
+                <Insets left="5.0" right="5.0"/>
+            </padding>
+            <children>
+                <Button fx:id="btnDelete" mnemonicParsing="false" text="Verwijder" visible="false" disable="true"/>
+                <Button fx:id="btnSave" onAction="#save" mnemonicParsing="false" text="Opslaan"/>
+                <Button fx:id="btnCancel" onAction="#cancel" mnemonicParsing="false" text="Annuleer" visible="false"
+                        disable="true"/>
+            </children>
+        </HBox>
+    </children>
 </fx:root>
