--- a/src/gui/Material.fxml
+++ b/src/gui/Material.fxml
@@ -116,8 +116,8 @@
                 <TableView fx:id="tvSimplifiedIdentifiers" editable="true" layoutX="25.0" prefHeight="200.0" prefWidth="200.0" style="-fx-focus-color: transparent" visible="false" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="45.0">
                     <columns>
                         <TableColumn fx:id="tcSimplifiedLocation" editable="true" prefWidth="75.0" style="-fx-alignment: center" text="Plaats" />
-                        <TableColumn fx:id="tcForLoan" editable="true" prefWidth="75.0" style="-fx-alignment: center" text="Ontleenbaar" />
-                        <TableColumn fx:id="tcNotForLoan" editable="true" prefWidth="75.0" style="-fx-alignment: center" text="Niet ontleenbaar" />
+                        <TableColumn fx:id="tcForLoan" editable="true" prefWidth="75.0" style="-fx-alignment: center" text="Aantal" />
+                        <TableColumn fx:id="tcNotForLoan" editable="true" prefWidth="75.0" style="-fx-alignment: center" text="Niet voor studenten" />
                     </columns>
                     <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
